added links and images to portfolio page and icons to the navigation

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,24 +9,31 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="./Assets/style.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="/Responsiveness-Portfolio/index.html">Ryan Whitcomb</a>
+        <a class="navbar-brand" href="/Portfolio/index.html">Ryan Whitcomb</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ml-md-auto">
-                <a class="nav-item nav-link" href="/Responsiveness-Portfolio/index.html">About<span
-                        class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link active" href="/Responsiveness-Portfolio/portfolio.html">Portfolio</a>
-                <a class="nav-item nav-link" href="/Responsiveness-Portfolio/contact.html" tabindex="-1"
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="/Portfolio/portfolio.html">Portfolio</a>
+                <a class="nav-item nav-link" href="/Portfolio/contact.html" tabindex="-1"
                     aria-disabled="true">Contact</a>
+                <a class="nav-item nav-link" href="/Portfolio/index.html">About<span
+                        class="sr-only">(current)</span></a>
+            </div>
+            <div class="navbar-nav ml-md-auto">
+                <a class="nav-item nav-link" href="https://github.com/ryanww321" target="_blank"><i
+                        class="fab fa-github"></i></a>
+                <a class="nav-item nav-link" href="https://www.linkedin.com/in/ryan-whitcomb-92561530/"
+                    target="_blank"><i class="fab fa-linkedin"></i></a>
             </div>
         </div>
     </nav>
@@ -37,17 +44,19 @@
             <div class="row">
                 <div class="col-lg-4 col-sm-6 col-xs-12">
                     <div class="card card-outline mb-4 mt-4">
-                        <img class="card-img-top" src="https://via.placeholder.com/250" alt="placeholder">
-                        <div class="card-body"><button type="button"
-                                class="btn btn-primary btn-lg btn-block">Placeholder</button>
+                        <img class="card-img-top" src="/Assets/password.png" alt="password generator">
+                        <div class="card-body"><a href="https://ryanww321.github.io/Password-Generator/"
+                                target="_blank"><button type="button" class="btn btn-primary btn-lg btn-block">Password
+                                    Generator</button></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-xs-12">
                     <div class="card card-outline mb-4 mt-4">
-                        <img class="card-img-top" src="https://via.placeholder.com/250" alt="placeholder">
-                        <div class="card-body"><button type="button"
-                                class="btn btn-primary btn-lg btn-block">Placeholder</button>
+                        <img class="card-img-top" src="/Assets/code-quiz.png" alt="code quiz">
+                        <div class="card-body"><a href="https://ryanww321.github.io/Code-Quiz-2.0/"
+                                target="_blank"><button type="button" class="btn btn-primary btn-lg btn-block">Code
+                                    Quiz</button></a>
                         </div>
                     </div>
                 </div>
@@ -55,23 +64,24 @@
             <div class="row">
                 <div class="col-lg-4 col-sm-6 col-xs-12">
                     <div class="card card-outline mb-4">
-                        <img class="card-img-top" src="https://via.placeholder.com/250" alt="placeholder">
-                        <div class="card-body"><button type="button"
-                                class="btn btn-primary btn-lg btn-block">Placeholder</button>
+                        <img class="card-img-top" src="/Assets/scheduler.png" alt="day planner">
+                        <div class="card-body"><a href="https://ryanww321.github.io/Day-Planner/"
+                                target="_blank"><button type="button" class="btn btn-primary btn-lg btn-block">Work Day
+                                    Scheduler</button></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-xs-12">
                     <div class="card card-outline mb-4">
-                        <img class="card-img-top" src="https://via.placeholder.com/250" alt="placeholder">
-                        <div class="card-body"><button type="button"
-                                class="btn btn-primary btn-lg btn-block">Placeholder</button>
+                        <img class="card-img-top" src="/Assets/weather-dashboard.png" alt="weather dashboard">
+                        <div class="card-body"><a href="https://ryanww321.github.io/Weather-Dashboard/"
+                                target="_blank"><button type="button" class="btn btn-primary btn-lg btn-block">Weather
+                                    Dashboard</button></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
     </main>
 
     <footer class="site-footer bg-dark fixed-bottom">
@@ -79,13 +89,21 @@
 
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link" href="/Responsiveness-Portfolio/index.html">About</a>
+                    <a class="nav-link active" href="/Portfolio/portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/Responsiveness-Portfolio/portfolio.html">Portfolio</a>
+                    <a class="nav-link" href="/Portfolio/contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Responsiveness-Portfolio/contact.html">Contact</a>
+                    <a class="nav-link" href="/Portfolio/index.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://github.com/ryanww321" target="_blank"><i
+                            class="fab fa-github"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.linkedin.com/in/ryan-whitcomb-92561530/" target="_blank"><i
+                            class="fab fa-linkedin"></i></a>
                 </li>
 
 
