--- a/contact.html
+++ b/contact.html
@@ -9,33 +9,40 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="./Assets/style.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="/Responsiveness-Portfolio/index.html">Ryan Whitcomb</a>
+        <a class="navbar-brand" href="/Portfolio/index.html">Ryan Whitcomb</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ml-md-auto">
-                <a class="nav-item nav-link" href="/Responsiveness-Portfolio/index.html">About<span
-                        class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="/Responsiveness-Portfolio/portfolio.html">Portfolio</a>
-                <a class="nav-item nav-link active" href="/Responsiveness-Portfolio/contact.html" tabindex="-1"
+            <div class="navbar-nav">
+                <a class="nav-item nav-link" href="/Portfolio/portfolio.html">Portfolio</a>
+                <a class="nav-item nav-link active" href="/Portfolio/contact.html" tabindex="-1"
                     aria-disabled="true">Contact</a>
+                <a class="nav-item nav-link" href="/Portfolio/index.html">About<span
+                        class="sr-only">(current)</span></a>
+            </div>
+            <div class="navbar-nav ml-md-auto">
+                <a class="nav-item nav-link" href="https://github.com/ryanww321" target="_blank"><i
+                        class="fab fa-github"></i></a>
+                <a class="nav-item nav-link" href="https://www.linkedin.com/in/ryan-whitcomb-92561530/"
+                    target="_blank"><i class="fab fa-linkedin"></i></a>
             </div>
         </div>
     </nav>
     <main role="main">
         <div class="container">
-            <h2>Contact</h2>
-            <div class="row wrapper">
-                <div class="col-md-12 col-lg-9 mt-2 mb-2">
-                    <form>
+            <!-- <div class="row"> -->
+                <!-- <div class="col-md-12 col-lg-9 mt-2 mb-2"> -->
+                    <form class="contact form">
                         <div class="form-group">
                             <label for="exampleInputName1">Name</label>
                             <input type="name" class="form-control" id="exampleInputName1" aria-describedby="nameHelp">
@@ -62,13 +69,21 @@
 
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link" href="/Responsiveness-Portfolio/index.html">About</a>
+                    <a class="nav-link" href="/Portfolio/portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Responsiveness-Portfolio/portfolio.html">Portfolio</a>
+                    <a class="nav-link active" href="/Portfolio/contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/Responsiveness-Portfolio/contact.html">Contact</a>
+                    <a class="nav-link" href="/Portfolio/index.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://github.com/ryanww321" target="_blank"><i
+                            class="fab fa-github"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.linkedin.com/in/ryan-whitcomb-92561530/" target="_blank"><i
+                            class="fab fa-linkedin"></i></a>
                 </li>
 
 
