--- a/contact.html
+++ b/contact.html
@@ -9,10 +9,9 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="./Assets/style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -38,29 +37,27 @@
             </div>
         </div>
     </nav>
-    <main role="main">
-        <div class="container">
-            <!-- <div class="row"> -->
-                <!-- <div class="col-md-12 col-lg-9 mt-2 mb-2"> -->
-                    <form class="contact form">
-                        <div class="form-group">
-                            <label for="exampleInputName1">Name</label>
-                            <input type="name" class="form-control" id="exampleInputName1" aria-describedby="nameHelp">
+    <main class="container" role="main">
+        <!-- <div class="row"> -->
+        <!-- <div class="col-md-12 col-lg-9 mt-2 mb-2"> -->
+        <form class="contact form">
+            <div class="form-group">
+                <label for="exampleInputName1">Name</label>
+                <input type="name" class="form-control" id="exampleInputName1" aria-describedby="nameHelp">
 
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Email</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1">
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleFormControlTextarea1">Message</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="9"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
-                </div>
             </div>
-        </div>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Email</label>
+                <input type="email" class="form-control" id="exampleInputEmail1">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1">Message</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="9"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <!-- </div> -->
+        <!-- </div> -->
 
     </main>
 
