--- a/index.html
+++ b/index.html
@@ -37,45 +37,38 @@
             </div>
         </div>
     </nav>
-    <main role="main">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-8 col-md-12 col-lg-8">
-                    <h2>About Me</h2>
-                    <div>
-                        <img src="https://via.placeholder.com/250" class="rounded float-left pr-3" alt="placeholder5">
-                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus
-                            commodo, tortor
-                            mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem
-                            malesuada
-                            magna mollis euismod. Donec sed odio dui. </p>
-                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus
-                            commodo, tortor
-                            mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem
-                            malesuada
-                            magna mollis euismod. Donec sed odio dui. </p>
-                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus
-                            commodo, tortor
-                            mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem
-                            malesuada
-                            magna mollis euismod. Donec sed odio dui. </p>
-                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus
-                            commodo, tortor
-                            mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem
-                            malesuada
-                            magna mollis euismod. Donec sed odio dui. </p>
+    <main class="container" role="main">
+        <div class="row">
+            <div class="col-xs-8 col-md-12 col-lg-8">
+                <h2>About Me</h2>
+                <div>
+                    <img src="https://via.placeholder.com/250" class="rounded float-left pr-3" alt="placeholder5">
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus
+                        commodo, tortor
+                        mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem
+                        malesuada
+                        magna mollis euismod. Donec sed odio dui. </p>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus
+                        commodo, tortor
+                        mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem
+                        malesuada
+                        magna mollis euismod. Donec sed odio dui. </p>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus
+                        commodo, tortor
+                        mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem
+                        malesuada
+                        magna mollis euismod. Donec sed odio dui. </p>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus
+                        commodo, tortor
+                        mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem
+                        malesuada
+                        magna mollis euismod. Donec sed odio dui. <i class="fab fa-linkedin"></i></p>
 
-                    </div>
                 </div>
-
-
             </div>
 
+
         </div>
-
-
-
-
     </main>
 
     <footer class="site-footer bg-dark fixed-bottom">
