--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="./Assets/style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -37,47 +37,45 @@
             </div>
         </div>
     </nav>
-    <main role="main">
-        <div class="container">
-            <h2>Portfolio</h2>
+    <main class="container" role="main">
+        <h2>Portfolio</h2>
 
-            <div class="row">
-                <div class="col-lg-4 col-sm-6 col-xs-12">
-                    <div class="card card-outline mb-4 mt-4">
-                        <img class="card-img-top" src="/Assets/password.png" alt="password generator">
-                        <div class="card-body"><a href="https://ryanww321.github.io/Password-Generator/"
-                                target="_blank"><button type="button" class="btn btn-primary btn-lg btn-block">Password
-                                    Generator</button></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6 col-xs-12">
-                    <div class="card card-outline mb-4 mt-4">
-                        <img class="card-img-top" src="/Assets/code-quiz.png" alt="code quiz">
-                        <div class="card-body"><a href="https://ryanww321.github.io/Code-Quiz-2.0/"
-                                target="_blank"><button type="button" class="btn btn-primary btn-lg btn-block">Code
-                                    Quiz</button></a>
-                        </div>
+        <div class="row">
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="card card-outline mb-4 mt-4">
+                    <img class="card-img-top" src="./Assets/password.png" alt="password generator">
+                    <div class="card-body"><a href="https://ryanww321.github.io/Password-Generator/"
+                            target="_blank"><button type="button" class="btn btn-primary btn-lg btn-block">Password
+                                Generator</button></a>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-4 col-sm-6 col-xs-12">
-                    <div class="card card-outline mb-4">
-                        <img class="card-img-top" src="/Assets/scheduler.png" alt="day planner">
-                        <div class="card-body"><a href="https://ryanww321.github.io/Day-Planner/"
-                                target="_blank"><button type="button" class="btn btn-primary btn-lg btn-block">Work Day
-                                    Scheduler</button></a>
-                        </div>
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="card card-outline mb-4 mt-4">
+                    <img class="card-img-top" src="./Assets/code-quiz.png" alt="code quiz">
+                    <div class="card-body"><a href="https://ryanww321.github.io/Code-Quiz-2.0/" target="_blank"><button
+                                type="button" class="btn btn-primary btn-lg btn-block">Code
+                                Quiz</button></a>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6 col-xs-12">
-                    <div class="card card-outline mb-4">
-                        <img class="card-img-top" src="/Assets/weather-dashboard.png" alt="weather dashboard">
-                        <div class="card-body"><a href="https://ryanww321.github.io/Weather-Dashboard/"
-                                target="_blank"><button type="button" class="btn btn-primary btn-lg btn-block">Weather
-                                    Dashboard</button></a>
-                        </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="card card-outline mb-4">
+                    <img class="card-img-top" src="./Assets/scheduler.png" alt="day planner">
+                    <div class="card-body"><a href="https://ryanww321.github.io/Day-Planner/" target="_blank"><button
+                                type="button" class="btn btn-primary btn-lg btn-block">Work Day
+                                Scheduler</button></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="card card-outline mb-4">
+                    <img class="card-img-top" src="./Assets/weather-dashboard.png" alt="weather dashboard">
+                    <div class="card-body"><a href="https://ryanww321.github.io/Weather-Dashboard/"
+                            target="_blank"><button type="button" class="btn btn-primary btn-lg btn-block">Weather
+                                Dashboard</button></a>
                     </div>
                 </div>
             </div>
