removed icon in html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         commodo, tortor
                         mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem
                         malesuada
-                        magna mollis euismod. Donec sed odio dui. <i class="fab fa-linkedin"></i></p>
+                        magna mollis euismod. Donec sed odio dui.</p>
 
                 </div>
             </div>
