fixed font awesome icons

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                         class="sr-only">(current)</span></a>
             </div>
             <div class="navbar-nav ml-md-auto">
-                <a class="nav-item nav-link" href="https://github.com/ryanww321" target="_blank"><i
-                        class="fab fa-github"></i></a>
+                <a class="nav-item nav-link" href="https://github.com/ryanww321" target="_blank"><i class="fa fa-github"
+                        aria-hidden="true"></i></a>
                 <a class="nav-item nav-link" href="https://www.linkedin.com/in/ryan-whitcomb-92561530/"
-                    target="_blank"><i class="fab fa-linkedin"></i></a>
+                    target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
             </div>
         </div>
     </nav>
@@ -85,12 +85,12 @@
                     <a class="nav-link active" href="/Portfolio/index.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/ryanww321" target="_blank"><i
-                            class="fab fa-github"></i></a>
+                    <a class="nav-link" href="https://github.com/ryanww321" target="_blank"><i class="fa fa-github"
+                            aria-hidden="true"></i></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://www.linkedin.com/in/ryan-whitcomb-92561530/" target="_blank"><i
-                            class="fab fa-linkedin"></i></a>
+                            class="fa fa-linkedin" aria-hidden="true"></i></a>
                 </li>
 
 
