--- a/portfolio.html
+++ b/portfolio.html
@@ -80,6 +80,22 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="card card-outline mb-4">
+                    <img class="card-img-top" src="./Assets/notetaker.png" alt="day planner">
+                    <div class="card-body"><a href="https://powerful-citadel-70509.herokuapp.com/" target="_blank"><button type="button" class="btn btn-primary btn-lg btn-block">Note Taker</button></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="card card-outline mb-4">
+                    <img class="card-img-top" src="./Assets/eatdaburger.png" alt="weather dashboard">
+                    <div class="card-body"><a href="https://quiet-everglades-33030.herokuapp.com/" target="_blank"><button type="button" class="btn btn-primary btn-lg btn-block">Eat-da-burger</button></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer class="site-footer bg-dark fixed-bottom">
