added my wellness journey app to the portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -96,6 +96,15 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-lg-4 col-sm-6 col-xs-12">
+                <div class="card card-outline mb-4">
+                    <img class="card-img-top" src="./Assets/mywelljourney.png" alt="day planner">
+                    <div class="card-body"><a href="https://project-2-4.herokuapp.com/" target="_blank"><button type="button" class="btn btn-primary btn-lg btn-block">My Wellness Journey</button></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer class="site-footer bg-dark fixed-bottom">
